--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>BRS Snake Game</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Snake Game</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>BRS Snake Game</h1>
-  <div class="game-container">
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div class="score-panel">
-      <p id="score">Score: 0</p>
-      <p id="status"></p>
-      <button onclick="restartGame()">Restart</button>
-    </div>
-  </div>
+  <h1>🐍 Snake Game</h1>
+  <canvas id="game" width="400" height="400"></canvas>
+
+  <!-- Sound Effects -->
+  <audio id="eatSound" src="https://www.soundjay.com/button/beep-07.wav"></audio>
+  <audio id="gameOverSound" src="https://www.soundjay.com/button/beep-10.wav"></audio>
+
   <script src="script.js"></script>
 </body>
 </html>
