--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <h1>🐍 Snake Game</h1>
+  <div class="controls">
+    <button id="startBtn">Start</button>
+    <button id="pauseBtn">Pause</button>
+    <button id="resetBtn">Reset</button>
+  </div>
   <canvas id="game" width="400" height="400"></canvas>
 
   <!-- Sound Effects -->
